--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <div style="position:fixed; bottom:0;right:0;" id="watsDiv"></div>
   <!-- GetButton.io widget -->
 <script type="text/javascript">
   (function () {
@@ -42,6 +43,7 @@
       var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
   })();
 </script>
-<!-- /GetButton.io widget -->
+<!-- /GetButton.io widget --></div>
+
 </body>
 </html>
